fix(markdown): prevent overflowing text caused by long words
Long links or imaginary long words should break
into multiple lines. Otherwise the text will push out
or overflow out of its container.

--- a/src/components/markdown/partial-styles/_headings.scss
+++ b/src/components/markdown/partial-styles/_headings.scss
@@ -50,6 +50,10 @@ h3,
 h4,
 h5,
 h6 {
+    word-break: break-word;
+    hyphens: auto;
+    -webkit-hyphens: auto;
+
     :not([contenteditable='true']) & {
         text-wrap: balance;
     }
